# trail-mate

./: CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md
.github/workflows/: ci.yml
apps/esp_idf/: CMakeLists.txt
apps/esp_idf/src/: app_facade_runtime.cpp  startup_runtime.cpp
apps/gat562_mesh_evb_pro/: library.json
apps/gat562_mesh_evb_pro/src/: app_facade_runtime.cpp  startup_runtime.cpp  ui_runtime.cpp
boards/gat562_mesh_evb_pro/: library.json
boards/gat562_mesh_evb_pro/src/: gat562_board.cpp  platform_ui_bindings.cpp  settings_store.cpp
boards/t_display_p4/: README.md  library.json
boards/t_display_p4/src/: rtc_runtime.cpp  runtime_support.cpp  t_display_p4_board.cpp
boards/tab5/: library.json
boards/tdeck/: library.json
boards/tlora_pager/: library.json
boards/twatchs3/: library.json
docs/: skyplot.md
docs/devices/: gat562-mesh-evb-pro.md  lilygo-t-lora-pager.md
modules/ui_mono_128x64/src/: runtime.cpp  text_renderer.cpp
modules/ui_shared/: library.json
platform/esp/arduino_common/: library.json
platform/esp/boards/: README.md  library.json
platform/esp/idf_components/t_display_p4/: CMakeLists.txt  Kconfig  hi8561_driver.c  hi8561_driver.h  rm69a10_driver.c  rm69a10_driver.h  trail_mate_t_display_p4_runtime.cpp
platform/esp/idf_components/t_display_p4/include/bsp/: trail_mate_t_display_p4_runtime.h
platform/shared/: README.md
scripts/: platformio-pre.py  prepare_pages_site.py
site/: .nojekyll  index.html
src/: main.cpp
src/ui/: ui_boot.cpp
tools/vscode/: run_idf_task.ps1
variants/gat562_mesh_evb_pro/: variant.h
(+106 files in other folders)
